# Gripterm

new-cloud/: package-lock.json  package.json
new-cloud-backend/: api_schemas.py  app.py  database_agent.py  pyproject.toml  utils.py  websocket_server.py
new-cloud-backend/tools/datetime/: manifest.yml  tool.py
new-cloud/src/: App.css  App.tsx  mosaicLayout.css
new-cloud/src/components/: DropdownMenu.tsx  ResourceDetail.tsx  XtermAgent.tsx
new-cloud/src/components/DataConnectors/: DataConnectorDetail.tsx  DataConnectorList.tsx
new-cloud/src/components/Structures/: ListStructures.tsx  StructureDetail.tsx
new-cloud/src/components/Theme/: StyledComponents.tsx  Theme.tsx
new-cloud/src/components/tables/: DataConnectorsTable.tsx  ResourceTable.tsx  StructuresTable.tsx
new-cloud/src/contexts/: ResponseContext.tsx
new-cloud/src/layout/: Dashboard.tsx  MosaicLayout.tsx
new-cloud/src/types/: ResourceTypes.ts
new-cloud/src/utils/: ClipboardCopy.tsx  TerminalCommands.ts  idGen.ts  toGithubURL.tsx
